--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">  <!--******viewport link added*****-->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">  <!--******viewport link added*****8-->
 
   <title>SpaceWalkers</title>
 
@@ -30,6 +30,7 @@
         <a href="#">About Us</a>
         <a href="#">Blog</a>
         <a href="#">Contact</a>
+        <a href="#">Sign In</a>
         <a href="#"></a>
       </nav>
        <!-- image code here -->
