--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">  <!--******viewport link added*****8-->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">  <!--******viewport link added*****-->
 
   <title>SpaceWalkers</title>
 
@@ -75,6 +75,7 @@
           Sign Up
         </div>
       </div>
+      
       
       <div class="walk-img">
           <img src="img/space-walk.png" alt="Space walking astronaut">
